tests/cases/standard-library/errors/std-mem-swap-own.ari
struct Holder {
  token: own i64,
}

fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  var left = Holder { token: make_owned(1) };
  var right = Holder { token: make_owned(2) };
  std::mem::swap<Holder>(ref mut left, ref mut right);
  drop left;
  drop right;
  return 0;
}
